# changelog-gen

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ENTERPRISE_SUMMARY.md  LICENSE  PUBLISHING.md  README.md  README_BAK.md  SECURITY.md  VERSIONING.md  changelog.toml
.cargo/: config.toml
.changelog/: template.hbs
.github/workflows/: ci.yml  release.yml
docs/: changelog-format.md  ci-usage.md  migration.md
src/: bootstrap.rs  error.rs  lib.rs  main.rs  parser.rs
src/application/: commands.rs  mod.rs  services.rs
src/cli/: mod.rs  self_update.rs
src/config/: loader.rs  schema.rs
src/core/: changelog.rs  git.rs  mod.rs  notes.rs
src/domain/: changelog.rs  commit.rs  version.rs
src/infrastructure/: git.rs  github.rs  mod.rs  plugins.rs  template.rs  templates.rs  workspace.rs
src/services/: notifier.rs  telemetry.rs
src/traits/: git.rs  template.rs
templates/: default.hbs
tests/: changelog_tests.rs  cli_golden_tests.rs  config_tests.rs  core_unit_tests.rs  e2e_changelog_document.rs  e2e_cli_flow.rs  parser_tests.rs  version_tests.rs
tests/fixtures/: changelog_roundtrip.md
