[package]
name = "changelog-gen"
version = "0.1.0"
edition = "2021"
authors = ["Saumil Patel <saumil@example.com>"]
repository = "https://github.com/SaumilP/changelog-gen"
homepage = "https://github.com/SaumilP/changelog-gen"
documentation = "https://docs.rs/changelog-gen"
readme = "README.md"
license = "MIT"
description = "Production-grade Rust CLI to generate changelogs from Git history"
keywords = ["changelog", "git", "devops", "release", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github", ".gitignore", "tests", "examples"]

[lib]
name = "changelog_gen"
path = "src/lib.rs"

[[bin]]
name = "changelog-gen"
path = "src/main.rs"
required-features = []

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
thiserror = "1"
git2 = "0.18"
regex = "1"
semver = "1"
handlebars = "5"
reqwest = { version = "0.11", features = ["json"] }
libloading = "0.8"
directories = "5"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
